@@ -1,3 +1,4 @@
+20190822 cleanup: remove unused dnscname.
 20190819 version: notqmail 1.07.
 20190810 code: remove incorrect usage of vfork()
 20190710 code: add instchown to set ownership and mode on installed files.
